# TimeStepEstimate

./: README.md  docker-compose.yml
.devcontainer/: devcontainer.json
cpp/: CMakeLists.txt  MANIFEST.in  config.h.cmake  dune.module  pyproject.toml  setup.py  timeStepEstimate.pc.in
cpp/cmake/modules/: CMakeLists.txt
cpp/doc/doxygen/: Doxylocal
cpp/dune/: CMakeLists.txt
cpp/dune/timeStepEstimate/: CMakeLists.txt  timeStepEstimate.hh
cpp/python/: CMakeLists.txt  setup.py.in
cpp/python/timestepestimate/: CMakeLists.txt  __init__.py  _timestepestimate.cc  directorFunctions.hh  externalload.hh  membranestrain.hh  nfe.hh  pbfe.hh  resultantrmshell.hh  rmstiffness.hh  transverseshear.hh
cpp/src/: CMakeLists.txt  timeStepEstimate.cc
python/: test.py
